// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Column render properly 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "column",
    }
  }
/>
`;

exports[`Column render properly with children 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <Text>
    test children
  </Text>
</View>
`;
